[gd_scene load_steps=7 format=3 uid="uid://b3gg6avnuypx6"]

[ext_resource type="AudioStream" uid="uid://cksppv16gcpua" path="res://Sound/multi-pop-1-188165.mp3" id="3_65d5p"]
[ext_resource type="AudioStream" uid="uid://doutnasnxuaej" path="res://Sound/upbeat-funky-retro-131297 (1).mp3" id="4_cy848"]
[ext_resource type="Script" path="res://โค้ด/Main.gd" id="4_ua0t8"]
[ext_resource type="Texture2D" uid="uid://bn5d1uuwj5jpt" path="res://ฉากเริ่มเกมใหม่/ปุ่มplay.png" id="5_q83pn"]
[ext_resource type="Texture2D" uid="uid://bkwg3sli83x1" path="res://ฉากเริ่มเกมใหม่/ปุ่มplay2.png" id="6_qix5o"]
[ext_resource type="Texture2D" uid="uid://77a7rwra7hft" path="res://ฉากเริ่มเกมใหม่/ฉากเปิดอันใหม่ล่าสุด.png" id="8_jlh8o"]

[node name="Main" type="Node2D"]

[node name="ฉากเปิดอันใหม่ล่าสุด" type="Sprite2D" parent="."]
position = Vector2(626, 323)
scale = Vector2(0.448645, 0.467143)
texture = ExtResource("8_jlh8o")

[node name="Main" type="Control" parent="ฉากเปิดอันใหม่ล่าสุด"]
layout_mode = 3
anchors_preset = 0
offset_left = -1169.35
offset_top = -807.599
offset_right = -1129.35
offset_bottom = -767.599
script = ExtResource("4_ua0t8")

[node name="Sound_play" type="AudioStreamPlayer2D" parent="ฉากเปิดอันใหม่ล่าสุด/Main"]
stream = ExtResource("3_65d5p")
volume_db = 1.0

[node name="Sound_main" type="AudioStreamPlayer2D" parent="ฉากเปิดอันใหม่ล่าสุด/Main"]
stream = ExtResource("4_cy848")
autoplay = true
panning_strength = 0.5

[node name="TextureButton" type="TextureButton" parent="ฉากเปิดอันใหม่ล่าสุด/Main"]
layout_mode = 0
offset_left = 663.386
offset_top = 1066.62
offset_right = 1220.39
offset_bottom = 1256.62
scale = Vector2(1.6849, 1.6849)
texture_normal = ExtResource("5_q83pn")
texture_hover = ExtResource("6_qix5o")

[connection signal="mouse_entered" from="ฉากเปิดอันใหม่ล่าสุด/Main/TextureButton" to="ฉากเปิดอันใหม่ล่าสุด/Main" method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="ฉากเปิดอันใหม่ล่าสุด/Main/TextureButton" to="ฉากเปิดอันใหม่ล่าสุด/Main" method="_on_texture_button_pressed"]
